--- a/streamlit_navigation_bar/templates/options.css
+++ b/streamlit_navigation_bar/templates/options.css
@@ -1,12 +1,27 @@
 {% extends "base.css" %}
 
-{% block show_menu %}
+{% block make_menu_clickable %}
+div[data-testid="stAppViewContainer"] {
+    pointer-events: none;
+}
+div[data-testid="collapsedControl"] {
+    pointer-events: auto;
+}
+section[data-testid="stSidebar"] {
+    pointer-events: auto;
+}
+div[data-testid="stVerticalBlockBorderWrapper"] {
+    pointer-events: auto;
+}
+{% endblock %}
+
+{% block hide_menu %}
 span[data-testid="stMainMenu"] {
     visibility: hidden;
 }
 {% endblock %}
 
-{% block show_sidebar %}
+{% block hide_sidebar %}
 div[data-testid="collapsedControl"] {
     visibility: hidden;
 }
